name:                haze
version:             0.1.0
description:         Simple bittorrent client
synopsis:            Simple bittorrent client
homepage:            https://github.com/cronokirby/haze
bug-reports:         https://github.com/cronokirby/haze/issues
license:             MIT
license-file:        LICENSE
author:              Lúcás Meier
maintainer:          cronokirby@gmail.com
copyright:           2018 Lúcás Meier
category:            Web
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
cabal-version:       1.24
tested-with:         GHC == 8.4.3

source-repository head
  type:                git
  location:            https://github.com/Lúcás Meier/haze.git

library
  hs-source-dirs:      src
  exposed-modules:     Haze
                       Haze.Bencoding
                       Haze.Tracker
  ghc-options:         -Wall
  build-depends:       base-noprelude       >= 4.11 && < 5
                     , attoparsec           >= 0.13 && < 0.14
                     , bytestring           >= 0.10 && < 0.11
                     , relude               >= 0.4  && < 0.5
                     , text                 >= 1.2  && < 1.3
                     , time                 >= 1.8  && < 1.9
                     , unordered-containers >= 0.2  && < 0.3
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude 

executable haze
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base-noprelude >= 4.11 && < 5
                     , haze
                     , relude         >= 0.4  && < 0.5
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude

test-suite darby-test
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  hs-source-dirs:    test
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                       base-noprelude       >= 4.11 && < 5
                     , bytestring           >= 0.10 && < 0.11
                     , haze
                     , hedgehog             >= 0.6  && < 0.7
                     , hspec                >= 2.5  && < 2.7
                     , relude               >= 0.4  && < 0.5
                     , unordered-containers >= 0.2  && < 0.3
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude
