name:                haze
version:             0.1.0
description:         Simple bittorrent client
synopsis:            Simple bittorrent client
homepage:            https://github.com/cronokirby/haze
bug-reports:         https://github.com/cronokirby/haze/issues
license:             MIT
license-file:        LICENSE
author:              Lúcás Meier
maintainer:          cronokirby@gmail.com
copyright:           2018 Lúcás Meier
category:            Web
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
cabal-version:       1.24
tested-with:         GHC == 8.4.3

source-repository head
  type:                git
  location:            https://github.com/cronokirby/haze.git

library
  hs-source-dirs:      src
  exposed-modules:     Haze
                       Haze.Announcer
                       Haze.Bencoding
                       Haze.Bits
                       Haze.Client
                       Haze.Messaging
                       Haze.Peer
                       Haze.PeerInfo
                       Haze.PieceBuffer
                       Haze.PieceWriter
                       Haze.Tracker
                       Data.RateWindow
                       Data.TieredList
  ghc-options:         -Wall
  build-depends:       base-noprelude       >= 4.12 && < 5
                     , attoparsec           >= 0.13 && < 0.14
                     , array                >= 0.5  && < 0.6
                     , async                >= 2.2  && < 2.3
                     , bytestring           >= 0.10 && < 0.11
                     , containers           >= 0.6  && < 0.7
                     , cryptohash-sha1      >= 0.11 && < 0.12
                     , hashable             >= 1.2  && < 1.3
                     , http-client          >= 0.5  && < 0.6
                     , http-types           >= 0.12 && < 0.13
                     , network              >= 2.8  && < 2.9
                     , path                 >= 0.6  && < 0.7
                     , path-io              >= 1.4  && < 1.5
                     , relude               >= 0.4  && < 0.5
                     , safe-exceptions      >= 0.1  && < 0.2
                     , stm                  >= 2.5  && < 2.6
                     , text                 >= 1.2  && < 1.3
                     , time                 >= 1.8  && < 1.9
                     , unordered-containers >= 0.2  && < 0.3
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude 
                     , NumericUnderscores

executable haze
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base-noprelude >= 4.11 && < 5
                     , haze
                     , relude         >= 0.4  && < 0.5
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude

test-suite darby-test
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  hs-source-dirs:    test
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                       base-noprelude       >= 4.11 && < 5
                     , array                >= 0.5  && < 0.6
                     , attoparsec           >= 0.13 && < 0.14
                     , bytestring           >= 0.10 && < 0.11
                     , haze
                     , hedgehog             >= 0.6  && < 0.7
                     , hspec                >= 2.5  && < 2.7
                     , path                 >= 0.6  && < 0.7
                     , relude               >= 0.4  && < 0.5
                     , unordered-containers >= 0.2  && < 0.3
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude
